compiler-tests/src/test/data/diagnostic/suspend/DuplicateKeyAccessors.kt
// ENABLE_SUSPEND_PROVIDERS

// RUN_PIPELINE_TILL: FIR2IR
// RENDER_IR_DIAGNOSTICS_FULL_TEXT

// Two accessors for the same binding, one suspend and one not: BOTH must be validated. The
// non-suspend one errors even though a suspend accessor with the same contextual key exists.

@DependencyGraph
interface ExampleGraph {
  suspend fun value(): String

  val <!SUSPEND_BINDING_FROM_NON_SUSPEND_ACCESSOR!>eagerValue<!>: String

  @Provides suspend fun provideString(): String = "hello"
}
